# Work_station

./: .gitignore  README.md  gitcmds.txt
C_Practise/: a.out  point
C_Practise/arrays/: 2darraymulti_modified.c  arrays_as_function_arguments.c  arrays_as_implicit_pointers.c  distinct_pairs  executable  func  size_of_arrays.txt  unique_array.c
C_Practise/asighnments/: quad  quadratic_equation.c  sq  sq.c
C_Practise/asighnments/18_02_2023/: calc  calc.c  modi  modified_square.c  power  power0fannumber.c  squareofanynumber  squareofanynumber.c
C_Practise/c_projects/conditional_stmts/: a.out  simple_calculator.c  simple_calculator_learnings.txt  simple_interest_calculator.c
C_Practise/function/: a.out  dif_inlinefun_macro.txt  function_pointer.c  function_return_pointer.c  function_returning_struct.c
C_Practise/gdb_debugger/: steps_debug_c_gdb.txt  valgrind.txt
C_Practise/loops/: difference_btw_iterations_loops.txt
C_Practise/loops/patterns/: a.out  diamond.c  diamond_num.c  hollow_square.c  inverted_pyramid.c  inverted_pyramid_sir.c  inverted_right_triangle_star.c  op_righttriangle_sir.c  pyramid.c  pyramid_sir.c  right_triangle.c  right_triangle_num.c  web_pyramid.c
C_Practise/pointers/: .~lock.Types_of_Pointers_in_C.docx#  Types_of_Pointers_in_C.docx  constant_pointer.c  constant_pointers.txt  dangling_pointer.c  funpointer_switchcase.txt  liar_constant_pointer.c  null_pointer.c  onepointer.c  pointer_arithematic_quick_recap  pointer_arrays.c  pointer_notes.txt  pointer_stored_in_stack_heap.txt  pointer_to_pointer.c  value_modification_via_pointer.c  void_pointer_notes.txt
C_Practise/sorting_techniques/: a.out  linear_sorting.c
C_Practise/storage_clases/: static_extern.c
C_Practise/storage_clases/reg/: reg1.c  reg_understandongs.txt  register_time.c
C_Practise/storage_clases/static_extern/: file1.c  file2.c  main.c  pro
C_Practise/web_practise/: arithematic  hello1.c  pointer_arithemtic_fun_array.c  pointer_array.c  swap  swap_pointer_array.c
Dyn_lib_Trial/: STEPS_TO_CREATE_DYN_LIB
Dyn_lib_Trial/first_dyn_lib/: .main.c.swp  main
Dyn_lib_Trial/frt_dyn_trial/: header_file.h  main  main.c
asighnments/c/basic/: acii_value.c  add_2_numbers.c  complex_number.c  compound_interest.c  float_multiply.c  hello_world.c  int_print.c  prime_number.c  print_name.c  print_prime.c  simpleinterest.c  size.c  swap.c  temperatue_cal.c
asighnments/c/learned/: masking_operations.c  shifting_op.c
autotools/autoollib/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
autotools/autoollib/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
autotools/autoollib/src/: Makefile  Makefile.am  Makefile.in  func.c  main  mathlib.h
autotools/autoollib/src/.deps/: func.Po  main.Po
autotools/basic_autotools/: Makefile  Makefile.in  config.status  configure.ac  configure~
autotools/basic_autotools/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
autotools/basic_autotools/src/: Makefile  Makefile.in  hello  main.c
autotools/dyn/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  configure~  libtool  test  test.c
autotools/dyn/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2  traces.3  traces.4
autotools/dyn/src/: Makefile  Makefile.am  Makefile.in  libmylib.la  square.c  square.h  square.lo
autotools/dyn/src/.deps/: square.Plo
autotools/dyn/src/.libs/: libmylib.lai  libmylib.so.1  libmylib.so.1.0.0
autotools/example2/: Readme_lib_hello_configure.txt
autotools/example2/lib_hello/: Makefile.am  configure  configure.ac  main.c
autotools/example2/lib_hello/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
autotools/example2/lib_hello/src/: mathlib.c  mathlib.h
autotools/example_1/: Readme_hello.txt
autotools/lib_web/: Makefile.am  configure  configure.ac  configure~  main.c  mathlib.h
autotools/lib_web/autom4te.cache/: output.0  output.2  output.4  requests  traces.0  traces.2  traces.3  traces.3t  traces.4  traces.4t
c_cmake/basic/first/: CMakeLists.txt
c_cmake/basic/macro/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
c_cmake/basic/organize/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
c_cmake/test1/: CMakeLists.txt
c_cmake/test1/source/: main.c
c_cmake/tutorial_cmake/basic_cmake/: CMakeLists.txt  Makefile  main.c
c_cmake/tutorial_cmake/if_endif/: cmake_install.cmake
c_cmake/tutorial_cmake/macro/: CMakeLists.txt  main.c
c_cmake/tutorial_cmake/source_variable/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  function.c  main.c  (+1 more)
docker/: Readme_yocto_compile_IMX6_VIYARA.txt  docker_functions.txt  docker_stops_cmds.txt  dockersetup.md
docker/Docs_docker/: Dockerfile.i.MX8M  docker_yocto_setup.txt
linux/: rootfs_file_system.txt
make_trail/: make_learnings
make_trail/2_files_1_header/: Makefile  file1.c  file2.c  header_file.h
make_trail/3_files_1_header/: Makefile
work/Hardware_specs/: hp_247_g8.txt  redmi_note_10s.txt
work/c_understandings/: C_Compilation_Errors.txt  adv-Wall.txt
work/data_comminication/: data_send_via_usb.txt  data_send_via_wifi.txt
yocto_notes/: adding_packages.txt  build_files_mean.txt  meta-layer-create.txt  sources_files_mean.txt  starting_bitbake.txt
(+38 files in other folders)
