# Initialize AC: ACINIT( package_name, version, bug_report_address)
AC_INIT([prog], [0.1])
# Initialize Automake
AM_INIT_AUTOMAKE
# AM stands for Automake commands, AC stands for Autoconf commands
# We use libraries
AC_PROG_RANLIB
AC_PROG_CC
AC_CONFIG_FILES([Makefile  src/Makefile])
# Finally produce "configure" script
AC_OUTPUT
